[project]
name = "mcp-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1,<0.29.0",
    "openai>=1.91.0,<2.0.0",
    "mcp>=1.11.0,<2.0.0",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.28",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "notebook>=7.4.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_calculator_server", "mcp_simple_chatbot"]

[tool.pyright]
include = ["mcp_calculator_server", "mcp_simple_chatbot"]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.379",
    "ruff>=0.6.9",
    "pytest>=8.3.3"
]